--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,32 @@
-# Compiled class file
-*.class
+/runme.log
 
-# Log file
-*.log
+*.swp
+.idea/
+bin/
+release/
+secrets/
 
-# BlueJ files
-*.ctxt
+# Compiled Object files, Static and Dynamic libs (Shared Objects)
+*.o
+*.a
+*.so
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# Folders
+_obj
+_test
 
-# Package Files #
-*.jar
-*.war
-*.ear
-*.zip
-*.tar.gz
-*.rar
+# Architecture specific extensions/prefixes
+*.[568vq]
+[568vq].out
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+*.cgo1.go
+*.cgo2.c
+_cgo_defun.c
+_cgo_gotypes.go
+_cgo_export.*
+
+_testmain.go
+
+*.exe
+*.test
+*.prof
